fixes z-index of cardlabels menu

--- a/src/components/CardMenu/CardMenu.module.scss
+++ b/src/components/CardMenu/CardMenu.module.scss
@@ -73,6 +73,7 @@
         justify-content: flex-start;
         margin-top: -10px;
         position: relative;
+        z-index: 99;
 
         .Label {
           margin-right: 4px;
